--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Whether Forecast</title>
-</head>
-
+<body>
+<h1>Whether Forecast</h1>
+<p>Test.</p>
+</body>
 </html>
