--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 <body>
 <h1>Whether Forecast</h1>
 <p>Test.</p>
+<textarea>
+<php>
+  //calls function and outputs result
+  Space Holder
+</php>
+</textarea>
 </body>
 </html>
