--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <h1>Whether Forecast</h1>
 <p>Test.</p>
 <textarea>
-<php>
+<?php>
   //calls function and outputs result
+?>
   Space Holder
-</php>
 </textarea>
 </body>
 </html>
