--- a/city.html
+++ b/city.html
@@ -110,10 +110,10 @@
                                                 <table>
                                                         <tr>
                                                                 <td style="padding-left:320px;padding-right:100px;padding-top:50px;padding-bottom:50px">
-                                                                        <img src="../whether/img/scarf.png" style ="width:70px;height:100px;">
-                                                                            <img src="../whether/img/winterjacket.png" style ="width:70px;height:100px;">
-                                                                                <img src="../whether/img/boots.png" style ="width:70px;height:100px;">
-                                                                                    <img src="../whether/img/gloves.png" style ="width:70px;height:100px;">
+                                                                        <img src="/img/scarf.png" style ="width:70px;height:100px;">
+                                                                            <img src="/img/winterjacket.png" style ="width:70px;height:100px;">
+                                                                                <img src="/img/boots.png" style ="width:70px;height:100px;">
+                                                                                    <img src="/img/gloves.png" style ="width:70px;height:100px;">
                                                                                             </td>
                                                             </tr>
                                                     </table>
