--- a/city.html
+++ b/city.html
@@ -107,7 +107,8 @@
                                         <h2><blue_t>What to Wear</blue_t></h2>
                                         <h3><span id="description"></span> </h3>
                                         <h4><blue_t>What to Eat</blue_t></h4>
-                                        <h5><span id="recipes"></span> </h5>
+                                        <h5><span id="title"></span> </h5>
+                                        <span id="recipes"></span>
                                         <div id="image-table">
                                                 <table>
                                                         <tr>
