--- a/city.html
+++ b/city.html
@@ -108,7 +108,7 @@
                                         <h3><span id="description"></span> </h3>
                                         <h4><blue_t>What to Eat</blue_t></h4>
                                         <h5><span id="title"></span> </h5>
-                                        <span id="recipes"></span>
+                                        <h6><span id="recipes"></span></h6>
                                         <div id="image-table">
                                                 <table>
                                                         <tr>
