--- a/city.html
+++ b/city.html
@@ -106,6 +106,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                         <h2><blue_t>What to Wear</blue_t></h2>
                                         <h3><span id="description"></span> </h3>
+                                <div class="col-lg-8 col-lg-offset-2">
                                         <h2><blue_t>What to Eat</blue_t></h2>
                                         <h3><span id="title"></span> </h3>
                                         <h4><span id="recipes"></span></h4>
