--- a/city.html
+++ b/city.html
@@ -106,13 +106,6 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                         <h2><blue_t>What to Wear</blue_t></h2>
                                         <h3><span id="description"></span> </h3>
-         <section id="download" class="content-section text-center">
-                <div class="download-section">
-                        <div class="container">
-                                <div class="col-lg-8 col-lg-offset-2">
-                                        <h2><blue_t>What to Eat</blue_t></h2>
-                                        <h3><span id="title"></span> </h3>
-                                        <h4><span id="recipes"></span></h4>
                                         <div id="image-table">
                                                 <table>
                                                         <tr>
@@ -126,6 +119,17 @@
                                                     </table>
                                             </div>
                                     </div>
+                            </div>
+                    </div>
+            </section>
+         <section id="download" class="content-section text-center">
+                <div class="download-section">
+                        <div class="container">
+                                <div class="col-lg-8 col-lg-offset-2">
+                                        <h2><blue_t>What to Eat</blue_t></h2>
+                                        <h3><span id="title"></span> </h3>
+                                        <h4><span id="recipes"></span></h4>
+                                      </div>
                             </div>
                     </div>
             </section>
